--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ in <span class="gold">elNER-18</span></h3>
 					</div>
 				</section>
 
-								<section>
+				<section>
 					<h3>Best performance <span class="gold">elNER-4</span> dataset</h3>
 					<h4>for spaCy and biLSTM-CRF (metrics in %)</h4>
 					<canvas class="stretch" data-chart="bar">
@@ -648,43 +648,43 @@ in <span class="gold">elNER-18</span></h3>
 					   {
 					    "data":[89.30,87.61,94.46,78.75],
 					    "label":"spaCy - P",
-					    "backgroundColor":[	"rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)"],
-					    "borderColor":[	"rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)"],
+					    "backgroundColor":[	"rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)"],
+					    "borderColor":[	"rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)"],
                 		"borderWidth": "1"
 					   },
 					   {
 					    "data":[93.12,89.17,96.86,81.30],
 					    "label":"biLSTM-CRF - P",
-					    "backgroundColor":["rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)"],
-					    "borderColor":[	"rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)"],
+					    "backgroundColor":["rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)"],
+					    "borderColor":[	"rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)"],
                 		"borderWidth": "1"
 					   },
 					   {
 					    "data":[93.92,86.10,95.72,78.31],
 					    "label":"spaCy - R",
-					    "backgroundColor":[	"rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)"],
-					    "borderColor":[	"rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)"],
+					    "backgroundColor":[	"rgba(55, 99, 132, 0.2)","rgba(55, 99, 132, 0.2)","rgba(55, 99, 132, 0.2)","rgba(55, 99, 132, 0.2)"],
+					    "borderColor":[	"rgba(55, 99, 132, 1)","rgba(55, 99, 132, 1)","rgba(55, 99, 132, 1)","rgba(55, 99, 132, 1)"],
                 		"borderWidth": "1"
 					   },
 					   {
 					    "data":[93.03,87.18,96.76,84.51],
 					    "label":"biLSTM-CRF - R",
-					    "backgroundColor":["rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)"],
-					    "borderColor":[	"rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)"],
+					    "backgroundColor":["rgba(154, 162, 235, 0.2)","rgba(154, 162, 235, 0.2)","rgba(154, 162, 235, 0.2)","rgba(154, 162, 235, 0.2)"],
+					    "borderColor":[	"rgba(154, 162, 235, 1)","rgba(154, 162, 235, 1)","rgba(154, 162, 235, 1)","rgba(154, 162, 235, 1)"],
                 		"borderWidth": "1"
 					   },
 					   {
 					    "data":[91.55,86.85,95.09,78.53],
 					    "label":"spaCy - F1",
-					    "backgroundColor":[	"rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)","rgba(255, 99, 132, 0.2)"],
-					    "borderColor":[	"rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)","rgba(255, 99, 132, 1)"],
+					    "backgroundColor":[	"rgba(255, 199, 132, 0.2)","rgba(255, 199, 132, 0.2)","rgba(255, 199, 132, 0.2)","rgba(255, 199, 132, 0.2)"],
+					    "borderColor":[	"rgba(255, 199, 132, 1)","rgba(255, 199, 132, 1)","rgba(255, 199, 132, 1)","rgba(255, 199, 132, 1)"],
                 		"borderWidth": "1"
 					   },
 					   {
 					    "data":[93.07,88.16,96.81,82.87],
 					    "label":"biLSTM-CRF - F1",
-					    "backgroundColor":["rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)","rgba(54, 162, 235, 0.2)"],
-					    "borderColor":[	"rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)","rgba(54, 162, 235, 1)"],
+					    "backgroundColor":["rgba(54, 62, 235, 0.2)","rgba(54, 62, 235, 0.2)","rgba(54, 62, 235, 0.2)","rgba(54, 62, 235, 0.2)"],
+					    "borderColor":[	"rgba(54, 62, 235, 1)","rgba(54, 62, 235, 1)","rgba(54, 62, 235, 1)","rgba(54, 62, 235, 1)"],
                 		"borderWidth": "1"
 					   }
 					  ]
@@ -754,98 +754,99 @@ in <span class="gold">elNER-18</span></h3>
 					</canvas>
 				</section>
 
-								<section>
-				 <section>
-				 <h2 class="gold">Examples</h2>
-				<div class="fragment" style="font-size: .55em;">
-				<figure style="margin-bottom: 6rem" >
-				<div class="entities" style="line-height: 2.5; direction: ltr">Από έρευνες σε οικίες και χώρους στην 
-				<mark class="entity" style="background: #feca74;">
-				    Κυψέλη
-				    <span>GPE</span>
-				</mark>
-				 και στη 
-				<mark class="entity" style="background: #feca74;">
-				    Μύκονο
-				    <span>GPE</span>
-				</mark>
-				 , βρέθηκαν και κατασχέθηκαν , ποσότητα κοκαΐνης βάρους 
-				<mark class="entity" style="background: #e4e7d2;">
-				    128,8 γραμμαρίων
-				    <span>QUANTITY</span>
-				</mark>
-				 , κρυμμένη ακόμα και μέσα σε πρίζες στον τοίχο , ποσότητα ακατέργαστης κάνναβης βάρους 
-				<mark class="entity" style="background: #e4e7d2;">
-				    176 γραμμαρίων
-				    <span>QUANTITY</span>
-				</mark>
-				 , 
-				<mark class="entity" style="background: #e4e7d2;">
-				    δύο
-				    <span>CARDINAL</span>
-				</mark>
-				 αυτοκίνητα , 
-				<mark class="entity" style="background: #e4e7d2;">
-				    2.990 ευρώ
-				    <span>MONEY</span>
-				</mark>
-				 , 
-				<mark class="entity" style="background: #e4e7d2;">
-				    έξι
-				    <span>CARDINAL</span>
-				</mark>
-				 κινητά τηλέφωνα , 
-				<mark class="entity" style="background: #e4e7d2;">
-				    τρεις
-				    <span>CARDINAL</span>
-				</mark>
-				 ζυγαριές ακριβείας , 
-				<mark class="entity" style="background: #e4e7d2;">
-				    τρία
-				    <span>CARDINAL</span>
-				</mark>
-				 βιβλιάρια τραπεζών με ύψος καταθέσεων 
-				<mark class="entity" style="background: #e4e7d2;">
-				    22.778 ευρώ
-				    <span>MONEY</span>
-				</mark>
-				 . </div>
-				</figure>
-				</div>
-				</section>
-
 				<section>
-				<div class="fragment" style="font-size: .55em;">
-				<figure style="margin-bottom: 6rem">
-				<div class="entities" style="line-height: 2.5; direction: ltr">
-				<mark class="entity" style="background: #bfe1d9;">
-				    Σάββατο 3/1
-				    <span>DATE</span>
-				</mark>
-				 , 
-				<mark class="entity" style="background: #bfe1d9;">
-				    20:15
-				    <span>TIME</span>
-				</mark>
-				 Q&amp;A με τον 
-				<mark class="entity" style="background: #aa9cfc;">
-				    Στέλιο Αποστολόπουλο
-				    <span>PERSON</span>
-				</mark>
-				 , διευθυντή φωτογραφίας του 
-				<mark class="entity" style="background: #f0d0ff;">
-				    Dolphin Man
-				    <span>WORK_OF_ART</span>
-				</mark>
-				 , και συζήτηση με το 
-				<mark class="entity" style="background: #7aecec;">
-				    Περιοδικό Φωτογράφος
-				    <span>ORG</span>
-				</mark>
-				 για την υποβρύχια φωτογράφιση . </div>
-				</figure>
-				</div>
-				</section>
+				 <h2 class="gold">Examples</h2>
+					
+					<section>
+					<div style="font-size: .55em;">
+					<figure style="margin-bottom: 6rem" >
+					<div class="entities" style="line-height: 2.5; direction: ltr">Από έρευνες σε οικίες και χώρους στην 
+					<mark class="entity" style="background: #feca74;">
+					    Κυψέλη
+					    <span>GPE</span>
+					</mark>
+					 και στη 
+					<mark class="entity" style="background: #feca74;">
+					    Μύκονο
+					    <span>GPE</span>
+					</mark>
+					 , βρέθηκαν και κατασχέθηκαν , ποσότητα κοκαΐνης βάρους 
+					<mark class="entity" style="background: #e4e7d2;">
+					    128,8 γραμμαρίων
+					    <span>QUANTITY</span>
+					</mark>
+					 , κρυμμένη ακόμα και μέσα σε πρίζες στον τοίχο , ποσότητα ακατέργαστης κάνναβης βάρους 
+					<mark class="entity" style="background: #e4e7d2;">
+					    176 γραμμαρίων
+					    <span>QUANTITY</span>
+					</mark>
+					 , 
+					<mark class="entity" style="background: #e4e7d2;">
+					    δύο
+					    <span>CARDINAL</span>
+					</mark>
+					 αυτοκίνητα , 
+					<mark class="entity" style="background: #e4e7d2;">
+					    2.990 ευρώ
+					    <span>MONEY</span>
+					</mark>
+					 , 
+					<mark class="entity" style="background: #e4e7d2;">
+					    έξι
+					    <span>CARDINAL</span>
+					</mark>
+					 κινητά τηλέφωνα , 
+					<mark class="entity" style="background: #e4e7d2;">
+					    τρεις
+					    <span>CARDINAL</span>
+					</mark>
+					 ζυγαριές ακριβείας , 
+					<mark class="entity" style="background: #e4e7d2;">
+					    τρία
+					    <span>CARDINAL</span>
+					</mark>
+					 βιβλιάρια τραπεζών με ύψος καταθέσεων 
+					<mark class="entity" style="background: #e4e7d2;">
+					    22.778 ευρώ
+					    <span>MONEY</span>
+					</mark>
+					 . </div>
+					</figure>
+					</div>
+					</section>
+
+					<section>
+					<div style="font-size: .55em;">
+					<figure style="margin-bottom: 6rem">
+					<div class="entities" style="line-height: 2.5; direction: ltr">
+					<mark class="entity" style="background: #bfe1d9;">
+					    Σάββατο 3/1
+					    <span>DATE</span>
+					</mark>
+					 , 
+					<mark class="entity" style="background: #bfe1d9;">
+					    20:15
+					    <span>TIME</span>
+					</mark>
+					 Q&amp;A με τον 
+					<mark class="entity" style="background: #aa9cfc;">
+					    Στέλιο Αποστολόπουλο
+					    <span>PERSON</span>
+					</mark>
+					 , διευθυντή φωτογραφίας του 
+					<mark class="entity" style="background: #f0d0ff;">
+					    Dolphin Man
+					    <span>WORK_OF_ART</span>
+					</mark>
+					 , και συζήτηση με το 
+					<mark class="entity" style="background: #7aecec;">
+					    Περιοδικό Φωτογράφος
+					    <span>ORG</span>
+					</mark>
+					 για την υποβρύχια φωτογράφιση . </div>
+					</figure>
+					</div>
+					</section>
 				</section>
 
 				<section style="font-size: .6em">
