--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 					
 					<li>Overview & Motivation</li>
 					<li>Proposed Framework</li>
-						elNER Annotation Model
-						Inference and Validation
-						Asset searching
+						<ul><li>Corpus Pre-processing</li>
+						<li>elNER Annotation Model</li>
+						<li>Annotation Decisions</li></ul>
 					<li>Evaluation</li>
 					<li>Future Directions</li>
 					</ul>
