--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
 				<section  style="font-size: .6em">
 					
-					<h2 class="gold">Word Representations</h2>
+					<h2 class="gold">ΕXPERIMENTAL SETUP -  Representations</h2>
 						<div>
 						
 						<ul>
@@ -356,7 +356,7 @@
 				</section>	
 
 				<section>
-					<h2 class="gold">DNN Models</h2>
+					<h2 class="gold">ΕXPERIMENTAL SETUP - DNN Models</h2>
 
 					<ol>
 						<li>Bidirectional LSTM-CRF</li>
