--- a/index.html
+++ b/index.html
@@ -367,6 +367,15 @@
 					</ol>
 
 				</section>
+				
+				<section>
+					<h2 class="gold">ΕXPERIMENTAL SETUP - Hyperparameters</h2>
+
+					<ol>
+						<li>spaCy NER model</li>
+					</ol>
+
+				</section>
 
 				<section>
 					<h3>Occurrences per entity type in <span class="gold">elNER-4</span> dataset</h3>
@@ -905,10 +914,22 @@ in <span class="gold">elNER-18</span></h3>
 						<li>In order to prevent the learning system from depending too heavily on one representation class, dropout is used.</li>
 						</ul>
 				</section>
+				
+				<section>
+					<h2 class="gold">ΕXPERIMENTAL SETUP - Error Analysis</h2>
 
+					<ol>
+						<li>Bidirectional LSTM-CRF</li>
+						<li>Bidirectional LSTM-GRU</li>
+						<li>Bidirectional LSTM-CNNs-CRF</li>
+						<li>Bidirectional LSTM-CNN</li>
+						<li>spaCy NER model</li>
+					</ol>
+
+				</section>
 
 				<section>
-					<h2 class="gold">Conclusions</h2>
+					<h2 class="gold">Future Directions</h2>
 				</section>
 
 			</div>
