--- a/index.html
+++ b/index.html
@@ -91,8 +91,6 @@
 						<li><a href="https://prodi.gy">Prodigy</a> was used to annotate the documents.</li>
 						<li>Word vectors trained with <a href="https://fasttext.cc">fastText</a> on Common Crawl and
 						Wikipedia.</li>
-						<li>The criterion for selecting the architectures was their
-						performance in English.</li>
 					</ul>
 				</section>
 				
@@ -357,7 +355,7 @@
 
 				<section>
 					<h2 class="gold">ΕXPERIMENTAL SETUP - DNN Models</h2>
-
+					<p>The criterion for selecting the architectures was their performance in English.</p>
 					<ol>
 						<li>Bidirectional LSTM-CRF</li>
 						<li>Bidirectional LSTM-GRU</li>
