--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 				</section>
 
 				<section>
-				<h2 class="gold">ΕXPERIMENTAL SETUP -  Evaluation metrics</h2>
+				<h2 class="gold">EXPERIMENTAL SETUP -  Evaluation metrics</h2>
 				<ul>
 					<li></li>
 				</ul>
