--- a/index.html
+++ b/index.html
@@ -369,9 +369,48 @@
 				<section>
 					<h2 class="gold">EXPERIMENTAL SETUP - Hyperparameters</h2>
 
-					<ol>
-						<li>spaCy NER model</li>
-					</ol>
+					<table>
+						<thead>
+						<tr>
+						<th>Parameter</th>
+						<th>Value</th>
+						<th>Parameter</th>
+						<th>Value</th>
+						</tr>
+						</thead>
+						<tbody>
+						<tr>
+						<td>char emb size</td>
+						<td>25</td>
+						<td>word emb size</td>
+						<td>300</td>
+						</tr>
+						<tr>
+						<td>char hidden</td>
+						<td>50</td>
+						<td>word hidden</td>
+						<td>200</td>
+						</tr>
+						<tr>
+						<td>CNN window</td>
+						<td>3</td>
+						<td>char CNN layer</td>
+						<td>1</td>
+						</tr>
+						<tr>
+						<td>batch size</td>
+						<td>64</td>
+						<td>dropout rate</td>
+						<td>0.5</td>
+						</tr>
+						<tr>
+						<td>learning rate</td>
+						<td>0.001</td>
+						<td>learning rate decay</td>
+						<td>0.9</td>
+						</tr>
+						</tbody>
+					</table>
 
 				</section>
 
