--- a/index.html
+++ b/index.html
@@ -963,6 +963,12 @@ in <span class="gold">elNER-18</span></h3>
 
 				<section>
 					<h2 class="gold">Future Directions</h2>
+					<ul>
+						<li>Annotation strategy will be validated by a second annotator</li>
+						<li>Sentence segmentation improvements</li>
+						<li>Hyperparameter fine-tuning</li>
+						<li>More experiments, including different annotation schemata for word embeddings, such as GloVe, own-trained ELMo, and BERT</li>
+					</ul>
 				</section>
 
 			</div>
