--- a/index.html
+++ b/index.html
@@ -954,9 +954,11 @@ in <span class="gold">elNER-18</span></h3>
 				
 				<section>
 					<h2 class="gold">EXPERIMENTAL SETUP - Error Analysis</h2>
-
+					Issues encountered from erroneous sentence segmentation
 					<ol>
-						<li>spaCy NER model</li>
+						<li>Inability to correctly address certain acronyms</li>
+						<li>Abbreviations like"κ.|mr." or "δρ.|dr."</li>
+						<li>legislation typology like "ν. 1243/2020|law1243/2020"</li>
 					</ol>
 
 				</section>
