--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 				<section>
 					<h2 class="gold">Methodology - Annotation specifications</h2>
 					<ul>
-						<li>Feature-based supervised machine learning</li>
-						<ul><li>Recent years, deep neural networks (DNN)</li></ul>
-						<li>Unsupervised machine learning</li>
-						<li>Rule-based learning</li>
+						<li>BBN TECHNOLOGIES tag-set</li>
+						<ul><li>29 category types in total</li></ul>
+						<li>18 selected for the elNER-18 dataset</li>
+						<li>4 selected (via merging similar categories) for the elNER-4 dataset</li></ul>
 					</ul>
 
 
