--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<h2 class="gold">Methodology - Annotation specifications</h2>
 					<ul>
 						<li>BBN TECHNOLOGIES tag-set</li>
-						<ul><li>29 category types in total</li></ul>
+						<ul><li>29 category types in total</li>
 						<li>18 selected for the elNER-18 dataset</li>
 						<li>4 selected (via merging similar categories) for the elNER-4 dataset</li></ul>
 					</ul>
