--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 				</section>
 
 				<section>
-				<h2 class="gold">EXPERIMENTAL SETUP -  Evaluation metrics</h2>
+				<h2 class="gold">Evaluation metrics</h2>
 				<ul>
 					<li></li>
 				</ul>
@@ -329,7 +329,7 @@
 
 				<section  style="font-size: .6em">
 					
-					<h2 class="gold">EXPERIMENTAL SETUP -  Representations</h2>
+					<h2 class="gold">Representations</h2>
 						<div>
 						
 						<ul>
