--- a/index.html
+++ b/index.html
@@ -63,14 +63,13 @@
 				</section>
 				
 				<section>
-					<h2 class="gold">Motivation</h2>
+					<h2 class="gold">Motivation and Conctribution</h2>
 					
 					<ul>
 						<li>Inspired from "<a href="https://github.com/eellak/gsoc2018-spacy">Addition of Greek language to spaCy</a>" for Google Summer of
 				Code 2018</li>
-						<li>.</li>
-						<li>.</li>
-						<li>.</li>
+						<ol><li>Attempt to provide more linguistic resources for the Greek language, focusing on the creation of a Greek NER dataset</li>
+							<li>Dataset evaluated with five state-of-the-art Deep Neural Network (DNN) models</li></ol>
 					</ul>
 				</section>				
 
