--- a/index.html
+++ b/index.html
@@ -323,6 +323,9 @@
 				<ul>
 					<li></li>
 				</ul>
+					\begin{equation}
+					F_i =2 \times \frac{P_i \times R_i}{P_i+R_i} \quad \text { F-macro }= \frac{\sum_i{F_i}}{C} .
+					\end{equation}
 
 				</section>
 
