--- a/index.html
+++ b/index.html
@@ -326,6 +326,10 @@
 					\begin{equation}
 					F_i =2 \times \frac{P_i \times R_i}{P_i+R_i} \quad \text { F-macro }= \frac{\sum_i{F_i}}{C} .
 					\end{equation}
+					
+					\begin{equation}
+          P = \frac{ \sum_i{TP_i} } { \sum_i{(TP_i+FP_i)} } \quad  R=\frac{ \sum_i{TP_i} } { \sum_i{(TP_i+FN_i)} } \quad \text { F-micro }=2 \times \frac{P \times  R}{P+R} .
+          \end{equation}
 
 				</section>
 
