--- a/index.html
+++ b/index.html
@@ -982,6 +982,7 @@ in <span class="gold">elNER-18</span></h3>
 		</div>
 
 		<script src="dist/reveal.js"></script>
+		<script src="plugin/zoom/zoom.js"></script>
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
@@ -1167,7 +1168,7 @@ borderWidth: "1"},
 				},
 
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMath, RevealMarkdown, RevealHighlight, RevealNotes, RevealChart ]
+				plugins: [ RevealZoom, RevealMath, RevealMarkdown, RevealHighlight, RevealNotes, RevealChart ]
 			});
 		</script>
 	</body>
