--- a/index.html
+++ b/index.html
@@ -962,8 +962,8 @@ in <span class="gold">elNER-18</span></h3>
 					Issues encountered from erroneous sentence segmentation
 					<ol>
 						<li>Inability to correctly address certain acronyms</li>
-						<li>Abbreviations like"κ.|mr." or "δρ.|dr."</li>
-						<li>legislation typology like "ν. 1243/2020|law1243/2020"</li>
+						<li>Abbreviations like <span class="lightblue">"κ.|mr." or "δρ.|dr."</span></li>
+						<li>legislation typology like <span class="lightblue">"ν. 1243/2020|law1243/2020"</span></li>
 					</ol>
 
 				</section>
