--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
 					
 					<h2 class="gold">Representations</h2>
 						<div>
-						<li>Word vectors trained with <a href="https://fasttext.cc">fastText</a> on Common Crawl and
-						Wikipedia.</li>
+						Word vectors trained with <a href="https://fasttext.cc">fastText</a> on Common Crawl and
+						Wikipedia.
 						<ul>
 							<li><strong class="lightblue">Distributed</strong></li>
 							<ul>
@@ -358,7 +358,7 @@
 				</section>	
 
 				<section>
-					<h2 class="gold">EXPERIMENTAL SETUP - DNN Models</h2>
+					<h2 class="gold">DNN Models</h2>
 					<p>The criterion for selecting the architectures was their performance in English.</p>
 					<ol>
 						<li>Bidirectional LSTM-CRF</li>
