--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 					</section>
 				</section>
 
-				<section>
+				<section style="font-size: .5em">
 				<h2 class="gold">Evaluation metrics</h2>
 					\begin{equation}
 					F_i =2 \times \frac{P_i \times R_i}{P_i+R_i} \quad \text { F-macro }= \frac{\sum_i{F_i}}{C} .
