--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
 				<section>
 				<h2 class="gold">Evaluation metrics</h2>
-					
+				Precision (P), recall (R), and micro F1-score were computed as performance metrics
 				<div style="font-size: .5em">
 						\begin{equation}
 						F_i =2 \times \frac{P_i \times R_i}{P_i+R_i} \quad \text { F-macro }= \frac{\sum_i{F_i}}{C} .
