--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 								<li><strong class="greenyellow">ELMo</strong>, <strong class="greenyellow">GPT2</strong>, <strong class="greenyellow">GPT3</strong>, <strong class="greenyellow">BERT</strong> <br> A word vector can take different values depending on its context.</li>
 							</ul>
 						</ul>
-							<p>* elNER: ord vectors trained with <a href="https://fasttext.cc">fastText</a> on Common Crawl and
+							<p>* elNER: word vectors trained with <a href="https://fasttext.cc">fastText</a> on Common Crawl and
 								Wikipedia.</p>
 						<p class="definition">Typically, word embeddings are pre-trained by optimizing an auxiliary objective in a large unlabeled corpus, such as predicting a word based on its context.</p>
 					</div>
