--- a/index.html
+++ b/index.html
@@ -954,6 +954,85 @@ in <span class="gold">elNER-18</span></h3>
 					</canvas>
 				</section>
 
+				<section>
+					<h2 class="gold"> Annotated Examples</h2>
+					<section>
+						<div class="entities"  style="font-size: .55em;line-height: 2.5; direction: ltr">Την 
+							<mark class="entity" style="background: #bfe1d9;">
+							    περασμένη εβδομάδα
+							    <span>DATE</span>
+							</mark>
+							 , ο υπουργός Εξωτερικών 
+							<mark class="entity" style="background: #aa9cfc;">
+							    Μάικ Πομπέο
+							    <span>PERSON</span>
+							</mark>
+							 συναντήθηκε με τον 
+							<mark class="entity" style="background: #aa9cfc;">
+							    Λόπες Ομπραδόρ
+							    <span>PERSON</span>
+							</mark>
+							 , ο οποίος δήλωσε ότι θέλει 
+							<mark class="entity" style="background: #e4e7d2;">
+							    μια
+							    <span>CARDINAL</span>
+							</mark>
+							 καλή σχέση με τις 
+							<mark class="entity" style="background: #feca74;">
+							    ΗΠΑ
+							    <span>GPE</span>
+							</mark>
+							 και οι συνεργάτες του θα συμμετάσχουν στις μελλοντικές συνομιλίες για τη 
+							<mark class="entity" style="background: #7aecec;">
+							    NAFTA
+							    <span>ORG</span>
+							</mark>
+							 . </div>
+					</section>
+					<section>
+						<div class="entities"  style="font-size: .55em;line-height: 2.5; direction: ltr">Ο κ. 
+						<mark class="entity" style="background: #aa9cfc;">
+						Ρέγκλινγκ
+						<span>PERSON</span>
+						</mark>
+						υπογράμμισε ότι στόχος των προγραμμάτων βοήθειας και των μεταρρυθμίσεων στην 
+						<mark class="entity" style="background: #feca74;">
+						Ελλάδα
+						<span>GPE</span>
+						</mark>
+						τα τελευταία 
+						<mark class="entity" style="background: #bfe1d9;">
+						οκτώ χρόνια
+						<span>DATE</span>
+						</mark>
+						ήταν η δημιουργία 
+						<mark class="entity" style="background: #e4e7d2;">
+						μιας
+						<span>CARDINAL</span>
+						</mark>
+						νέας βάσης για υγιή και βιώσιμη ανάπτυξη , προς το συμφέρον τόσο των 
+						<mark class="entity" style="background: #c887fb;">
+						Ελλήνων
+						<span>NORP</span>
+						</mark>
+						πολιτών , όσο και του 
+						<mark class="entity" style="background: #7aecec;">
+						ESM
+						<span>ORG</span>
+						</mark>
+						. </div>
+					</section>
+					<section>
+						 <div class="entities" style="font-size: .55em;line-height: 2.5; direction: ltr">Από την έντυπη έκδοση 
+						<mark class="entity" style="background: #7aecec;">
+						    Tης Δανάης Αλεξάκη dalex@naftemporiki.gr Θέση
+						    <span>ORG</span>
+						</mark>
+						 μάχης έχουν πάρει οι παγωτοβιομηχανίες , διεκδικώντας μεγαλύτερο μερίδιο στην πίτα της κατανάλωσης , η οποία από την αρχή του έτους εμφανίζει σημαντικά βελτιωμένες επιδόσεις στο κανάλι των σούπερ μάρκετ , ενώ οι προβλέψεις για αυξημένο τουριστικό ρεύμα τη φετινή καλοκαιρινή σεζόν ενισχύουν περαιτέρω τη δυναμική της κατηγορίας του παγωτού . </div>
+					</section>
+
+				</section>
+
 				<section style="font-size: .6em">
 					<h2 class="gold">Discussion</h2>
 
@@ -991,6 +1070,18 @@ in <span class="gold">elNER-18</span></h3>
 
 			</div>
 		</div>
+
+		<section>
+			<h2 class="gold">LINKS</h2>
+			<ul>
+			<li>
+				Dataset elNER<br>
+				<a href="https://nmpartzio.github.io/elner">https://nmpartzio.github.io/elner</a></li>
+			
+			<li>Presentation<br>
+            <a href="https://nmpartzio.github.io/elner_slides">https://nmpartzio.github.io/elner_slides</a></li>
+		</ul>
+		</section>
 
 		<script src="dist/reveal.js"></script>
 		<script src="plugin/zoom/zoom.js"></script>
