--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						</ul>
 					</section>
 
-					<section>
+					<section style="font-size: .5em">
 						<h2 class="gold">Ontonotes 5 annotations</h2>
 						<table>
 						<thead>
@@ -196,7 +196,7 @@
 						</table>
 
 					</section>
-					<section>
+					<section style="font-size: .6em">
 						<h2 class="gold">CoNLL 2003 annotations</h2>
 						<table>
 						<thead>
