--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					</div>
 
 					</section>
-					<section>
+					<section style="font-size: .7em">
 							
 							<ul>
 								<li><strong class="greenyellow">Applications</strong></li>
