--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				</section>
 				
 				<section>
-					<h2 class="gold">Motivation and Conctribution</h2>
+					<h2 class="gold">Motivation and Contribution</h2>
 					
 					<ul>
 						<li>Inspired from "<a href="https://github.com/eellak/gsoc2018-spacy">Addition of Greek language to spaCy</a>" for Google Summer of
