--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,9 @@ in <span class="gold">elNER-18</span></h3>
 					<h2 class="gold">Discussion</h2>
 
 						<ul>
+							<li>The overall best system on both datasets is the biLSTM-CNN-CRF model with ELMo embeddings.</li>
+							<li>biLSTM-CNN is the weakest, but faster model in both Greek NER datasets.</li>
+							<li>ELMo-based models managed to provide the best results in almost all tests.</li>
 						<li>Best results are obtained from the neural networks who use in last layer a CRF decoding function.</li>
 						<li>Entities with low number of samples and high ambiguity i.e., WORK OF ART, FAC, PRODUCT, EVENT, LAW have worse precision, recall and F-score metrics.</li>
 						</ul>
